Updated helm and app

--- a/api/link_service/entity_mappings.json
+++ b/api/link_service/entity_mappings.json
@@ -1,11 +1,25 @@
 {
-    "PatientFollowUp": "Patient",
-    "CancerEpisode": "Patient",
-    "Diagnosis": "CancerEpisode",
-    "ClinicalStage": "Diagnosis",
-    "PathologicalStage": "Diagnosis",
-    "EpisodeEvent": "CancerEpisode",
-    "DiseaseExtent": "EpisodeEvent",
+    "PatientFollowUp": [
+        "Patient"
+    ],
+    "CancerEpisode": [
+        "Patient"
+    ],
+    "Diagnosis": [
+        "CancerEpisode"
+    ],
+    "ClinicalStage": [
+        "Diagnosis"
+    ],
+    "PathologicalStage": [
+        "Diagnosis"
+    ],
+    "EpisodeEvent": [
+        "CancerEpisode"
+    ],
+    "DiseaseExtent": [
+        "EpisodeEvent"
+    ],
     "GeneticTestExpression": [
         "EpisodeEvent",
         "Diagnosis"
