Add new confidence analysis module and configuration for NLP evaluation. Introduced scripts for calculating confidence scores from logprobs, identifying false positives, and generating detailed reports. Updated evaluation scripts to integrate confidence thresholds and improved HTML output for better visualization of results.

--- a/api/nlp/vllm_config.json
+++ b/api/nlp/vllm_config.json
@@ -1,7 +1,7 @@
 {
   "use_vllm": true,
   "vllm_endpoint": "http://localhost:8000/v1",
-  "model_name": "unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit",
+  "model_name": "unsloth/Llama-3.2-3B-Instruct-unsloth-bnb-4bit",
   "batch_size": 8,
   "timeout": 30
 }
